--- a/package.json
+++ b/package.json
@@ -21,12 +21,16 @@
     "@nestjs/core": "^5.0.0-beta.6",
     "@nestjs/microservices": "^5.0.0-beta.6",
     "@nestjs/testing": "^5.0.0-beta.6",
+    "@nestjs/typeorm": "^3.0.0",
     "@nestjs/websockets": "^5.0.0-beta.6",
     "class-transformer": "^0.1.9",
     "class-validator": "^0.8.5",
     "fastify-formbody": "^2.0.0",
+    "mysql": "^2.15.0",
+    "redis": "^2.8.0",
     "reflect-metadata": "^0.1.12",
     "rxjs": "^6.0.0",
+    "typeorm": "^0.2.6",
     "typescript": "^2.6.2"
   },
   "devDependencies": {
