--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "test:cov": "jest --coverage",
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "webpack": "webpack --config webpack.config.js",
+    "migration:create": "./node_modules/.bin/ts-node ./node_modules/.bin/typeorm migration:generate --name new",
     "migration:up": "./node_modules/.bin/ts-node ./node_modules/.bin/typeorm migration:run",
     "migration:down": "./node_modules/.bin/ts-node ./node_modules/.bin/typeorm migration:revert"
   },
@@ -22,13 +23,20 @@
     "@nestjs/common": "^5.0.0-beta.6",
     "@nestjs/core": "^5.0.0-beta.6",
     "@nestjs/microservices": "^5.0.0-beta.6",
+    "@nestjs/passport": "^1.0.10",
+    "@nestjs/swagger": "^2.0.0",
     "@nestjs/testing": "^5.0.0-beta.6",
     "@nestjs/typeorm": "^3.0.0",
     "@nestjs/websockets": "^5.0.0-beta.6",
     "class-transformer": "^0.1.9",
     "class-validator": "^0.8.5",
     "fastify-formbody": "^2.0.0",
+    "jsonwebtoken": "^8.2.1",
+    "moment": "^2.22.1",
     "mysql": "^2.15.0",
+    "passport": "^0.4.0",
+    "passport-http-bearer": "^1.0.1",
+    "passport-jwt": "^4.0.0",
     "redis": "^2.8.0",
     "reflect-metadata": "^0.1.12",
     "rxjs": "^6.0.0",
