--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@nestjs/testing": "^5.0.0-beta.6",
     "@nestjs/typeorm": "^3.0.0",
     "@nestjs/websockets": "^5.0.0-beta.6",
+    "@types/lodash": "^4.14.109",
     "class-transformer": "^0.1.9",
     "class-validator": "^0.8.5",
     "fastify-formbody": "^2.0.0",
