--- a/.env.example.env
+++ b/.env.example.env
@@ -6,7 +6,7 @@ TYPEORM_DATABASE = altiore_contrib
 TYPEORM_PORT = 3306
 TYPEORM_SYNCHRONIZE = false
 TYPEORM_LOGGING = true
-TYPEORM_ENTITIES = src/**/**.entity.ts
+TYPEORM_ENTITIES = src/@entities/**/**.entity.ts
 TYPEORM_MIGRATIONS = migrations/*.ts
 TYPEORM_MIGRATIONS_DIR = migrations
 TYPEORM_TIMEZONE = Z
