--- a/.env.example.env
+++ b/.env.example.env
@@ -1,7 +1,7 @@
 TYPEORM_CONNECTION = mysql
 TYPEORM_HOST = localhost
 TYPEORM_USERNAME = altiore_contrib
-TYPEORM_PASSWORD = !ap4L&BQnfbH
+TYPEORM_PASSWORD = wrong-password
 TYPEORM_DATABASE = altiore_contrib
 TYPEORM_PORT = 3306
 TYPEORM_SYNCHRONIZE = false
@@ -11,4 +11,6 @@ TYPEORM_MIGRATIONS = migrations/*.ts
 TYPEORM_MIGRATIONS_DIR = migrations
 TYPEORM_TIMEZONE = Z
 
-JWT_SECRET = qPIiAwgH280jKkdldeZZ1hJqp)&m_dQ4
+JWT_SECRET = wrong-jwt-secret-32-characters
+
+SENDGRID_API_KEY = wrong-api-key
