--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "test:cov": "jest --coverage",
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "webpack": "webpack --config webpack.config.js",
+    "mjml": "mjml src/mail/@mails/mjml/*.mjml -o mails/",
     "migration:create": "./node_modules/.bin/ts-node ./node_modules/.bin/typeorm migration:generate --name new",
     "migration:up": "./node_modules/.bin/ts-node ./node_modules/.bin/typeorm migration:run",
     "migration:down": "./node_modules/.bin/ts-node ./node_modules/.bin/typeorm migration:revert"
@@ -28,12 +29,15 @@
     "@nestjs/testing": "^5.0.0-beta.6",
     "@nestjs/typeorm": "^3.0.0",
     "@nestjs/websockets": "^5.0.0-beta.6",
+    "@sendgrid/mail": "^6.2.1",
     "@types/lodash": "^4.14.109",
     "class-transformer": "^0.1.9",
     "class-validator": "^0.8.5",
     "fastify-formbody": "^2.0.0",
     "jsonwebtoken": "^8.2.1",
+    "mjml": "^4.0.5",
     "moment": "^2.22.1",
+    "mustache": "^2.3.0",
     "mysql": "^2.15.0",
     "passport": "^0.4.0",
     "passport-http-bearer": "^1.0.1",
