--- a/.env.example.env
+++ b/.env.example.env
@@ -14,3 +14,6 @@ TYPEORM_TIMEZONE = Z
 JWT_SECRET = wrong-jwt-secret-32-characters
 
 SENDGRID_API_KEY = wrong-api-key
+
+MAILS_PATH = /home/altiore/www/altiore/mails
+
