--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "start:dev": "nodemon",
     "prestart:prod": "rm -rf dist && tsc",
     "start:prod": "node dist/main.js",
-    "start:hmr": "node dist/server",
+    "start:hmr": "node dist/main.hmr",
     "test": "jest",
     "test:cov": "jest --coverage",
     "test:e2e": "jest --config ./test/jest-e2e.json",
