chare(pipelines): auto test

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -6,11 +6,11 @@
 image: node:8.9.0
 
 pipelines:
-  default:
-    - step:
-        deployment: test
-        caches:
-          - node
-        script: # Modify the commands below to build your repository.
-          - yarn install
-          - yarn test
+  branches:
+    master:
+      - step:
+          caches:
+            - node
+          script:
+            - yarn install
+            - yarn test
