test(pipeline): setup test envirenment

--- a/.env.example.env
+++ b/.env.example.env
@@ -17,3 +17,7 @@ SENDGRID_API_KEY = wrong-api-key
 
 MAILS_PATH = /home/altiore/www/altiore/mails
 
+TEST_TYPEORM_DATABASE = pipelines
+TEST_TYPEORM_USERNAME = test_user
+TEST_TYPEORM_PASSWORD = test_user_password
+
