--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -15,6 +15,8 @@ pipelines:
             - yarn install
             - yarn migration:up
             - yarn test
+          services:
+            - mysql
 
 definitions:
   services:
