--- a/.env.prod.example.env
+++ b/.env.prod.example.env
@@ -5,7 +5,7 @@ TYPEORM_PASSWORD = wrong-password
 TYPEORM_DATABASE = altiore_contrib
 TYPEORM_PORT = 3306
 TYPEORM_SYNCHRONIZE = false
-TYPEORM_LOGGING = true
+TYPEORM_LOGGING = false
 TYPEORM_ENTITIES = dist/@entities/**/**.entity.js
 TYPEORM_MIGRATIONS_DIR = migrations
 TYPEORM_TIMEZONE = Z
