prettier and deploy

--- a/.env.example.env
+++ b/.env.example.env
@@ -1,7 +1,7 @@
 TYPEORM_CONNECTION = mysql
-TYPEORM_HOST = localhost
+TYPEORM_HOST = 127.0.0.1
 TYPEORM_USERNAME = altiore_contrib
-TYPEORM_PASSWORD = wrong-password
+TYPEORM_PASSWORD = !ap4L&BQnfbH
 TYPEORM_DATABASE = altiore_contrib
 TYPEORM_PORT = 3306
 TYPEORM_SYNCHRONIZE = false
@@ -11,13 +11,12 @@ TYPEORM_MIGRATIONS = migrations/*.ts
 TYPEORM_MIGRATIONS_DIR = migrations
 TYPEORM_TIMEZONE = Z
 
-JWT_SECRET = wrong-jwt-secret-32-characters
+TEST_TYPEORM_DATABASE = altiore_contrib_test
+TEST_TYPEORM_USERNAME = altiore_contrib
+TEST_TYPEORM_PASSWORD = !ap4L&BQnfbH
 
-SENDGRID_API_KEY = wrong-api-key
+JWT_SECRET = qPIiAwgH280jKkdldeZZ1hJqpt&m_dQ4
+
+SENDGRID_API_KEY = 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
 
 MAILS_PATH = /home/altiore/www/altiore/mails
-
-TEST_TYPEORM_DATABASE = pipelines
-TEST_TYPEORM_USERNAME = test_user
-TEST_TYPEORM_PASSWORD = test_user_password
-
