--- a/package.json
+++ b/package.json
@@ -3,7 +3,11 @@
   "version": "1.0.0",
   "description": "calculate-contribution-for-users-in-project",
   "author": "razvanlomov@gmail.com",
-  "license": "MIT",
+  "license": "BSD",
+  "main": "dist/main.js",
+  "engines": {
+    "node": "8.9.0"
+  },
   "scripts": {
     "format": "prettier --write \"**/*.ts\"",
     "start": "ts-node -r tsconfig-paths/register src/main.ts",
@@ -20,7 +24,8 @@
     "migration:up": "./node_modules/.bin/ts-node ./node_modules/.bin/typeorm migration:run",
     "migration:down": "./node_modules/.bin/ts-node ./node_modules/.bin/typeorm migration:revert",
     "migration:test:up": "./node_modules/.bin/ts-node ./node_modules/.bin/typeorm --config .env.test migration:run",
-    "migration:test:down": "./node_modules/.bin/ts-node ./node_modules/.bin/typeorm --config .env.test migration:revert"
+    "migration:test:down": "./node_modules/.bin/ts-node ./node_modules/.bin/typeorm --config .env.test migration:revert",
+    "precommit": "lint-staged"
   },
   "dependencies": {
     "@nestjs/common": "^5.0.0-beta.6",
@@ -56,9 +61,11 @@
     "@types/node": "^9.3.0",
     "@types/supertest": "^2.0.4",
     "dotenv": "^6.0.0",
+    "husky": "^0.14.3",
     "jest": "^21.2.1",
+    "lint-staged": "^7.1.3",
     "nodemon": "^1.14.1",
-    "prettier": "^1.11.1",
+    "prettier": "1.13.4",
     "supertest": "^3.0.0",
     "ts-jest": "^21.2.4",
     "ts-loader": "^4.1.0",
@@ -68,6 +75,10 @@
     "webpack": "^4.2.0",
     "webpack-cli": "^2.0.13",
     "webpack-node-externals": "^1.6.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://git.heroku.com/altiore.git"
   },
   "jest": {
     "moduleFileExtensions": [
@@ -81,5 +92,15 @@
       "^.+\\.(t|j)s$": "ts-jest"
     },
     "coverageDirectory": "../coverage"
+  },
+  "lint-staged": {
+    "src/**/*.{ts}": [
+      "prettier --write --print-width 120 --single-quote --parser typescript",
+      "git add"
+    ],
+    "src/**/*.{js,json,md}": [
+      "prettier --write --print-width 120 --single-quote",
+      "git add"
+    ]
   }
 }
