--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "node": "8.9.0"
   },
   "scripts": {
+    "postinstall": "yarn migration:up && rm -rf dist && tsc",
     "prestart": "yarn migration:up && rm -rf dist && tsc",
     "format": "prettier --write \"**/*.ts\"",
     "start": "node dist/main.js",
