--- a/package.json
+++ b/package.json
@@ -10,12 +10,11 @@
   },
   "scripts": {
     "postinstall": "yarn migration:up && rm -rf dist && tsc",
-    "prestart": "yarn migration:up && rm -rf dist && tsc",
     "format": "prettier --write \"**/*.ts\"",
     "start": "node dist/main.js",
     "start:old": "ts-node -r tsconfig-paths/register src/main.ts",
     "start:dev": "nodemon",
-    "prestart:prod": "yarn migration:up && rm -rf dist && tsc",
+    "prestart:prod:old": "yarn migration:up && rm -rf dist && tsc",
     "start:prod": "node dist/main.js",
     "start:hmr": "node dist/server",
     "test": "jest",
