--- a/.env.example.env
+++ b/.env.example.env
@@ -7,8 +7,8 @@ TYPEORM_PORT = 3306
 TYPEORM_SYNCHRONIZE = false
 TYPEORM_LOGGING = true
 TYPEORM_ENTITIES = src/@entities/**/**.entity.ts
-TYPEORM_MIGRATIONS = migrations/*.ts
-TYPEORM_MIGRATIONS_DIR = migrations
+TYPEORM_MIGRATIONS_DIR = src/@migrations
+TYPEORM_MIGRATIONS = src/@migrations/*.ts
 TYPEORM_TIMEZONE = Z
 
 TEST_TYPEORM_DATABASE = altiore_contrib_test
