--- a/.env.prod.example.env
+++ b/.env.prod.example.env
@@ -7,7 +7,8 @@ TYPEORM_PORT = 3306
 TYPEORM_SYNCHRONIZE = false
 TYPEORM_LOGGING = false
 TYPEORM_ENTITIES = dist/@entities/**/**.entity.js
-TYPEORM_MIGRATIONS_DIR = migrations
+TYPEORM_MIGRATIONS_DIR = dist/@migrations
+TYPEORM_MIGRATIONS = dist/@migrations/*.js
 TYPEORM_TIMEZONE = Z
 
 JWT_SECRET = wrong-jwt-secret-32-characters
