change configs examples

--- a/.env.prod.example.env
+++ b/.env.prod.example.env
@@ -9,7 +9,7 @@ TYPEORM_LOGGING = false
 TYPEORM_ENTITIES = dist/@entities/**/**.entity.js
 TYPEORM_MIGRATIONS_DIR = dist/@migrations
 TYPEORM_MIGRATIONS = dist/@migrations/*.js
-TYPEORM_TIMEZONE = Z
+PGSSLMODE = require
 
 JWT_SECRET = wrong-jwt-secret-32-characters
 
