--- a/.env.test.example.env
+++ b/.env.test.example.env
@@ -7,6 +7,5 @@ TYPEORM_PORT = 3306
 TYPEORM_SYNCHRONIZE = false
 TYPEORM_LOGGING = true
 TYPEORM_ENTITIES = src/@entities/**/**.entity.ts
-TYPEORM_MIGRATIONS = migrations/*.ts
-TYPEORM_MIGRATIONS_DIR = migrations
-TYPEORM_TIMEZONE = Z
+TYPEORM_MIGRATIONS = src/@migrations/*.ts
+TYPEORM_MIGRATIONS_DIR = src/@migrations
