--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "start:prod": "node dist/main.js",
     "start:hmr": "node dist/server",
     "test": "jest",
-    "test:cov": "jest --coverage",
+    "test:cov": "jest --coverage && codecov --token=d80eff89-9fdc-4a57-a585-70b6cbcf1abc",
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "webpack": "webpack --config webpack.config.js",
     "mjml": "mjml src/mail/@mails/mjml/*.mjml -o mails/",
@@ -64,6 +64,7 @@
     "@types/jest": "^21.1.8",
     "@types/node": "^9.3.0",
     "@types/supertest": "^2.0.4",
+    "codecov": "^3.0.2",
     "dotenv": "^6.0.0",
     "husky": "^0.14.3",
     "jest": "^21.2.1",
@@ -71,7 +72,7 @@
     "nodemon": "^1.14.1",
     "prettier": "1.13.4",
     "supertest": "^3.0.0",
-    "ts-jest": "^21.2.4",
+    "ts-jest": "^22.4.6",
     "ts-loader": "^4.1.0",
     "ts-node": "^6.1.0",
     "tsconfig-paths": "^3.1.1",
