feat(login): add ability login to sistem

--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     "prestart:prod:old": "yarn migration:up && rm -rf dist && tsc",
     "start:prod": "node dist/main.js",
     "start:hmr": "node dist/server",
-    "test": "jest",
-    "test:cov": "jest --coverage && codecov --token=d80eff89-9fdc-4a57-a585-70b6cbcf1abc",
+    "test": "jest --maxWorkers=1",
+    "test:cov": "jest --coverage --maxWorkers=1 && codecov --token=d80eff89-9fdc-4a57-a585-70b6cbcf1abc",
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "webpack": "webpack --config webpack.config.js",
     "mjml": "mjml src/mail/@mails/mjml/*.mjml -o mails/",
@@ -43,6 +43,7 @@
     "@types/lodash": "^4.14.109",
     "class-transformer": "^0.1.9",
     "class-validator": "^0.8.5",
+    "crypto": "^1.0.1",
     "fastify-formbody": "^2.0.0",
     "jsonwebtoken": "^8.2.1",
     "mjml": "^4.0.5",
