--- a/package.json
+++ b/package.json
@@ -9,13 +9,13 @@
     "node": "8.9.0"
   },
   "scripts": {
-    "postinstall": "yarn migration:up && rm -rf dist && tsc",
-    "format": "prettier --write \"**/*.ts\"",
+    "postinstall": "yarn build && yarn migration:up",
+    "prestart": "rm -rf dist && tsc && yarn migration:up",
     "start": "node dist/main.js",
+    "build": "rimraf dist && tsc",
+    "format": "prettier --write \"**/*.ts\"",
     "start:old": "ts-node -r tsconfig-paths/register src/main.ts",
     "start:dev": "cross-env NODE_ENV=development nodemon",
-    "prestart:prod:old": "yarn migration:up && rm -rf dist && tsc",
-    "start:prod": "node dist/main.js",
     "start:hmr": "node dist/server",
     "test": "jest --maxWorkers=1",
     "test:cov": "jest --coverage --maxWorkers=1 && codecov --token=d80eff89-9fdc-4a57-a585-70b6cbcf1abc",
@@ -72,6 +72,7 @@
     "lint-staged": "^7.1.3",
     "nodemon": "^1.14.1",
     "prettier": "1.13.4",
+    "rimraf": "^2.6.2",
     "supertest": "^3.0.0",
     "ts-jest": "^22.4.6",
     "ts-loader": "^4.1.0",
@@ -100,11 +101,11 @@
     "coverageDirectory": "../coverage"
   },
   "lint-staged": {
-    "src/**/*.{ts}": [
+    "**/*.ts": [
       "prettier --write --print-width 120 --single-quote --parser typescript",
       "git add"
     ],
-    "src/**/*.{js,json,md}": [
+    "./src/**/*.{js,json,md}": [
       "prettier --write --print-width 120 --single-quote",
       "git add"
     ]
