--- a/.env.example.env
+++ b/.env.example.env
@@ -1,11 +1,11 @@
-TYPEORM_CONNECTION = mysql
-TYPEORM_HOST = 127.0.0.1
+TYPEORM_CONNECTION = postgres
+TYPEORM_HOST = localhost
 TYPEORM_USERNAME = altiore_contrib
-TYPEORM_PASSWORD = !ap4L&BQnfbH
+TYPEORM_PASSWORD = password
 TYPEORM_DATABASE = altiore_contrib
-TYPEORM_PORT = 3306
+TYPEORM_PORT = 5432
 TYPEORM_SYNCHRONIZE = false
-TYPEORM_LOGGING = true
+TYPEORM_LOGGING = false
 TYPEORM_ENTITIES = src/@entities/**/**.entity.ts
 TYPEORM_MIGRATIONS_DIR = src/@migrations
 TYPEORM_MIGRATIONS = src/@migrations/*.ts
