--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "class-validator": "^0.8.5",
     "crypto": "^1.0.1",
     "fastify-formbody": "^2.0.0",
+    "generate-password": "^1.4.0",
     "jsonwebtoken": "^8.2.1",
     "mjml": "^4.0.5",
     "moment": "^2.22.1",
