--- a/package.json
+++ b/package.json
@@ -28,58 +28,58 @@
     "precommit": "yarn test && rimraf mails/* && yarn prepare:mails && git add . && lint-staged"
   },
   "dependencies": {
-    "@nestjs/common": "^5.0.0-beta.6",
-    "@nestjs/core": "^5.0.0-beta.6",
-    "@nestjs/microservices": "^5.0.0-beta.6",
-    "@nestjs/passport": "^1.0.10",
-    "@nestjs/swagger": "^2.0.0",
-    "@nestjs/testing": "^5.0.0-beta.6",
-    "@nestjs/typeorm": "^3.0.0",
-    "@nestjs/websockets": "^5.0.0-beta.6",
-    "@sendgrid/mail": "^6.2.1",
-    "@types/lodash": "^4.14.109",
-    "class-transformer": "^0.1.9",
-    "class-validator": "^0.8.5",
-    "crypto": "^1.0.1",
-    "fastify-formbody": "^2.0.0",
-    "generate-password": "^1.4.0",
-    "jsonwebtoken": "^8.2.1",
-    "mjml": "^4.0.5",
-    "moment": "^2.22.1",
-    "mustache": "^2.3.0",
-    "mysql": "^2.15.0",
-    "passport": "^0.4.0",
-    "passport-http-bearer": "^1.0.1",
-    "passport-jwt": "^4.0.0",
-    "pg": "^7.4.3",
-    "redis": "^2.8.0",
-    "reflect-metadata": "^0.1.12",
-    "rxjs": "^6.0.0",
-    "typeorm": "^0.2.6",
-    "typescript": "^2.6.2"
+    "@nestjs/common": "5.0.1",
+    "@nestjs/core": "5.0.1",
+    "@nestjs/microservices": "5.0.1",
+    "@nestjs/passport": "1.1.0",
+    "@nestjs/swagger": "2.2.0",
+    "@nestjs/testing": "5.0.1",
+    "@nestjs/typeorm": "3.0.2",
+    "@nestjs/websockets": "5.0.1",
+    "@sendgrid/mail": "6.3.1",
+    "class-transformer": "0.1.9",
+    "class-validator": "0.8.5",
+    "crypto": "1.0.1",
+    "fastify-formbody": "2.0.0",
+    "generate-password": "1.4.0",
+    "jsonwebtoken": "8.3.0",
+    "moment": "2.22.2",
+    "mustache": "2.3.0",
+    "passport": "0.4.0",
+    "passport-http-bearer": "1.0.1",
+    "passport-jwt": "4.0.0",
+    "pg": "7.4.3",
+    "redis": "2.8.0",
+    "reflect-metadata": "0.1.12",
+    "rxjs": "6.2.1",
+    "typeorm": "0.2.7",
+    "typescript": "2.9.2"
   },
   "devDependencies": {
-    "@types/express": "^4.0.39",
-    "@types/jest": "^21.1.8",
-    "@types/node": "^9.3.0",
-    "@types/supertest": "^2.0.4",
-    "codecov": "^3.0.2",
-    "dotenv": "^6.0.0",
-    "husky": "^0.14.3",
-    "jest": "^21.2.1",
-    "lint-staged": "^7.1.3",
-    "nodemon": "^1.14.1",
+    "@types/express": "4.16.0",
+    "@types/jest": "21.1.2",
+    "@types/lodash": "4.14.110",
+    "@types/node": "10.5.1",
+    "@types/supertest": "2.0.4",
+    "codecov": "3.0.2",
+    "dotenv": "6.0.0",
+    "husky": "0.14.3",
+    "jest": "23.2.0",
+    "lint-staged": "7.2.0",
+    "mjml": "4.1.0",
+    "nodemon": "1.17.5",
     "prettier": "1.13.4",
-    "rimraf": "^2.6.2",
-    "supertest": "^3.0.0",
-    "ts-jest": "^22.4.6",
-    "ts-loader": "^4.1.0",
-    "ts-node": "^6.1.0",
-    "tsconfig-paths": "^3.1.1",
-    "tslint": "5.3.2",
-    "webpack": "^4.2.0",
-    "webpack-cli": "^2.0.13",
-    "webpack-node-externals": "^1.6.0"
+    "rimraf": "2.6.2",
+    "supertest": "3.1.0",
+    "ts-jest": "23.0.0",
+    "ts-loader": "4.4.2",
+    "ts-node": "7.0.0",
+    "tsconfig-paths": "3.4.2",
+    "tslint": "5.10.0",
+    "tslint-config-prettier": "1.13.0",
+    "webpack": "4.14.0",
+    "webpack-cli": "3.0.8",
+    "webpack-node-externals": "1.7.2"
   },
   "repository": {
     "type": "git",
