test(refresh): recreate table before tests

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -13,6 +13,7 @@ pipelines:
           - node
         script:
           - yarn install
+          - yarn pretest
           - yarn test:cov
         services:
           - postgres
@@ -24,6 +25,7 @@ pipelines:
             - node
           script:
             - yarn install
+            - yarn pretest
             - yarn test:cov
           services:
             - postgres
