--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 TYPEORM_CONNECTION = postgres
 TYPEORM_HOST = localhost
 TYPEORM_USERNAME = altiore_contrib
-TYPEORM_PASSWORD = password
+TYPEORM_PASSWORD = wrong-password
 TYPEORM_DATABASE = altiore_contrib
 TYPEORM_PORT = 5432
 TYPEORM_SYNCHRONIZE = false
@@ -12,10 +12,8 @@ TYPEORM_MIGRATIONS = src/@migrations/*.ts
 
 TEST_TYPEORM_DATABASE = altiore_contrib_test
 TEST_TYPEORM_USERNAME = altiore_contrib
-TEST_TYPEORM_PASSWORD = !ap4L&BQnfbH
+TEST_TYPEORM_PASSWORD = wrong-password
 
-JWT_SECRET = qPIiAwgH280jKkdldeZZ1hJqpt&m_dQ4
+JWT_SECRET = wrong-jwt-secret-32-characters
 
-SENDGRID_API_KEY = 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
-
-MAILS_PATH = /home/altiore/www/altiore/mails
+SENDGRID_API_KEY = wrong-api-key
