fix(chore): update origin

--- a/package.json
+++ b/package.json
@@ -15,8 +15,9 @@
     "start:dev": "cross-env NODE_ENV=development nodemon",
     "start:hmr": "node dist/server",
     "pretest": "node scripts/refresh.js && yarn migration:test:up",
-    "test": "jest --maxWorkers=1",
-    "test:cov": "jest --coverage --maxWorkers=1 && codecov --token=d80eff89-9fdc-4a57-a585-70b6cbcf1abc",
+    "pretest:cov": "node scripts/refresh.js && yarn migration:test:up",
+    "test": "jest --maxWorkers=1 --detectOpenHandles",
+    "test:cov": "jest --coverage --maxWorkers=1 --detectOpenHandles && codecov --token=d80eff89-9fdc-4a57-a585-70b6cbcf1abc",
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "webpack": "webpack --config webpack.config.js",
     "prepare:mails": "mjml src/mail/mjml/*.mjml -o mails/",
