feat(chore): изменил название папке entities->orm. Перенес миграции внутрь модуля orm. Создал несколько примеров тестов e2n

--- a/.env.example
+++ b/.env.example
@@ -6,13 +6,22 @@ TYPEORM_DATABASE = altiore_contrib
 TYPEORM_PORT = 5432
 TYPEORM_SYNCHRONIZE = false
 TYPEORM_LOGGING = false
-TYPEORM_ENTITIES = src/@entities/**/**.entity.ts
-TYPEORM_MIGRATIONS_DIR = src/@migrations
-TYPEORM_MIGRATIONS = src/@migrations/*.ts
 
+# for dev only
+TYPEORM_ENTITIES = src/@orm/**/**.entity.ts
+TYPEORM_MIGRATIONS_DIR = src/@orm/@migrations
+TYPEORM_MIGRATIONS = src/@orm/@migrations/*.ts
+
+# for test only
 TEST_TYPEORM_DATABASE = altiore_contrib_test
 TEST_TYPEORM_USERNAME = altiore_contrib
 TEST_TYPEORM_PASSWORD = wrong-password
+
+# for prod only
+TYPEORM_ENTITIES = dist/@orm/**/**.entity.js
+TYPEORM_MIGRATIONS_DIR = dist/@orm/@migrations
+TYPEORM_MIGRATIONS = dist/@orm/@migrations/*.js
+PGSSLMODE = require
 
 JWT_SECRET = wrong-jwt-secret-32-characters
 
