fix(chore): test env deployment step. typescript version

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -9,6 +9,7 @@ pipelines:
   default:
     - step:
         name: Migrations and test (look at postinstall script)
+        deployment: test
         caches:
           - node
         script:
