--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "altiore",
+  "name": "altiore-api",
   "version": "1.0.0",
-  "description": "calculate-contribution-for-users-in-project",
+  "description": "Calculate contribution",
   "author": "razvanlomov@gmail.com",
   "license": "UNLICENSED",
   "main": "dist/main.js",
@@ -14,10 +14,10 @@
     "build": "rm -rf dist && tsc",
     "start:dev": "cross-env NODE_ENV=development nodemon",
     "start:hmr": "node dist/server",
-    "pretest": "node scripts/refresh.js && yarn migration:test:up",
-    "pretest:cov": "node scripts/refresh.js && yarn migration:test:up",
-    "test": "jest --maxWorkers=1 --detectOpenHandles",
-    "test:cov": "jest --coverage --maxWorkers=1 --detectOpenHandles && codecov --token=d80eff89-9fdc-4a57-a585-70b6cbcf1abc",
+    "pretest": "cross-env TYPEORM_DATABASE=altiore_contrib_test node bin/refresh.js && yarn migration:test:up",
+    "test": "cross-env TYPEORM_DATABASE=altiore_contrib_test jest --maxWorkers=1 --detectOpenHandles",
+    "pretest:remote": "echo  \"Please, do NOT run LOCALLY!\" && node bin/refresh.js && yarn migration:up",
+    "test:remote": "echo -e \"Please, do NOT run LOCALLY!\" && jest --coverage --maxWorkers=1 --detectOpenHandles && codecov --token=d80eff89-9fdc-4a57-a585-70b6cbcf1abc",
     "test:e2e": "jest --config jest.config.e2e.js --maxWorkers=1 --detectOpenHandles",
     "webpack": "webpack --config webpack.config.js",
     "prepare:mails": "mjml src/mail/mjml/*.mjml -o mails/",
@@ -25,8 +25,8 @@
     "migration:create": "./node_modules/.bin/ts-node ./node_modules/.bin/typeorm migration:create --name new",
     "migration:up": "./node_modules/.bin/ts-node ./node_modules/.bin/typeorm migration:run",
     "migration:down": "./node_modules/.bin/ts-node ./node_modules/.bin/typeorm migration:revert",
-    "migration:test:up": "./node_modules/.bin/ts-node ./node_modules/.bin/typeorm --config .env.test migration:run",
-    "migration:test:down": "./node_modules/.bin/ts-node ./node_modules/.bin/typeorm --config .env.test migration:revert",
+    "migration:test:up": "cross-env TYPEORM_DATABASE=altiore_contrib_test ./node_modules/.bin/ts-node ./node_modules/.bin/typeorm migration:run",
+    "migration:test:down": "cross-env TYPEORM_DATABASE=altiore_contrib_test ./node_modules/.bin/ts-node ./node_modules/.bin/typeorm migration:revert",
     "precommit": "yarn test && rimraf mails/* && yarn prepare:mails && git add . && lint-staged"
   },
   "dependencies": {
