--- a/.env.example
+++ b/.env.example
@@ -1,28 +1,8 @@
-TYPEORM_CONNECTION = postgres
-TYPEORM_HOST = localhost
+NODE_ENV = development
+
 TYPEORM_USERNAME = altiore_contrib
 TYPEORM_PASSWORD = wrong-password
 TYPEORM_DATABASE = altiore_contrib
-TYPEORM_PORT = 5432
-TYPEORM_SYNCHRONIZE = false
-TYPEORM_LOGGING = false
-
-# for dev only
-TYPEORM_ENTITIES = src/@orm/**/**.entity.ts
-TYPEORM_MIGRATIONS_DIR = src/@orm/@migrations
-TYPEORM_MIGRATIONS = src/@orm/@migrations/*.ts
-
-# for test only
-TEST_TYPEORM_DATABASE = altiore_contrib_test
-TEST_TYPEORM_USERNAME = altiore_contrib
-TEST_TYPEORM_PASSWORD = wrong-password
-
-# for prod only
-TYPEORM_ENTITIES = dist/@orm/**/**.entity.js
-TYPEORM_MIGRATIONS_DIR = dist/@orm/@migrations
-TYPEORM_MIGRATIONS = dist/@orm/@migrations/*.js
-PGSSLMODE = require
 
 JWT_SECRET = wrong-jwt-secret-32-characters
-
 SENDGRID_API_KEY = wrong-api-key
