--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@nestjs/typeorm": "3.0.2",
     "@nestjs/websockets": "5.0.1",
     "@sendgrid/mail": "6.3.1",
+    "cache-manager-redis-store": "1.5.0",
     "class-transformer": "0.1.9",
     "class-validator": "0.8.5",
     "crypto": "1.0.1",
@@ -77,8 +78,8 @@
     "ts-loader": "4.4.2",
     "ts-node": "7.0.0",
     "tsconfig-paths": "3.4.2",
-    "tslint": "5.10.0",
-    "tslint-config-prettier": "1.13.0",
+    "tslint": "5.11.0",
+    "tslint-config-prettier": "1.15.0",
     "webpack": "4.14.0",
     "webpack-cli": "3.0.8",
     "webpack-node-externals": "1.7.2"
