--- a/package.json
+++ b/package.json
@@ -99,6 +99,7 @@
       "git add"
     ],
     "*.{ts,tsx}": [
+      "prettier --write --print-width 120 --single-quote --parser typescript --trailing-comma es5",
       "tslint --fix -t verbose",
       "prettier --write --print-width 120 --single-quote --parser typescript --trailing-comma es5",
       "git add"
