--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "start": "cross-env NODE_ENV=development nodemon",
     "start:hmr": "node dist/server",
     "first:install": "bin/install.sh",
-    "postinstall": "yarn build && yarn migration:up",
+    "postinstall": "npm run build && npm run migration:up",
     "build": "rm -rf dist && tsc",
-    "pretest": "cross-env TYPEORM_DATABASE=altiore_contrib_test node bin/refresh.js && yarn migration:test:up",
+    "pretest": "cross-env TYPEORM_DATABASE=altiore_contrib_test node bin/refresh.js && npm run migration:test:up",
     "test": "cross-env TYPEORM_DATABASE=altiore_contrib_test jest -i -b --detectOpenHandles",
-    "pretest:remote": "echo  \"Please, do NOT run LOCALLY!\" && node bin/refresh.js && yarn migration:up",
+    "pretest:changed:only": "npm run pretest",
+    "test:changed:only": "cross-env TYPEORM_DATABASE=altiore_contrib_test jest -i -b --lastCommit --detectOpenHandles",
+    "pretest:remote": "echo  \"Please, do NOT run LOCALLY!\" && node bin/refresh.js && npm run migration:up",
     "test:remote": "echo -e \"Please, do NOT run LOCALLY!\" && jest --coverage -i && codecov --token=d80eff89-9fdc-4a57-a585-70b6cbcf1abc",
     "webpack": "webpack --config webpack.config.js",
     "prepare:mails": "mjml src/mail/mjml/*.mjml -o mails/",
@@ -25,25 +27,27 @@
     "migration:up": "./node_modules/.bin/ts-node ./node_modules/.bin/typeorm migration:run",
     "migration:down": "./node_modules/.bin/ts-node ./node_modules/.bin/typeorm migration:revert",
     "migration:test:up": "cross-env TYPEORM_DATABASE=altiore_contrib_test ./node_modules/.bin/ts-node ./node_modules/.bin/typeorm migration:run",
-    "migration:test:down": "cross-env TYPEORM_DATABASE=altiore_contrib_test ./node_modules/.bin/ts-node ./node_modules/.bin/typeorm migration:revert"
+    "migration:test:down": "cross-env TYPEORM_DATABASE=altiore_contrib_test ./node_modules/.bin/ts-node ./node_modules/.bin/typeorm migration:revert",
+    "ln:typeorm:fixtures": "rm -rf node_modules/typeorm-fixtures && ln -s $PWD/../../typeorm-fixtures $PWD/node_modules/typeorm-fixtures"
   },
   "dependencies": {
-    "@nestjs/common": "5.0.1",
-    "@nestjs/core": "5.0.1",
-    "@nestjs/microservices": "5.0.1",
-    "@nestjs/passport": "1.1.0",
-    "@nestjs/swagger": "2.2.0",
-    "@nestjs/testing": "5.0.1",
-    "@nestjs/typeorm": "3.0.2",
-    "@nestjs/websockets": "5.0.1",
+    "@nestjs/common": "5.3.7",
+    "@nestjs/core": "^5.3.7",
+    "@nestjs/microservices": "^5.3.7",
+    "@nestjs/passport": "^5.1.0",
+    "@nestjs/swagger": "^2.5.1",
+    "@nestjs/testing": "^5.3.7",
+    "@nestjs/typeorm": "^5.2.2",
+    "@nestjs/websockets": "^5.3.7",
     "@sendgrid/mail": "6.3.1",
     "cache-manager-redis-store": "1.5.0",
     "class-transformer": "0.1.9",
-    "class-validator": "0.8.5",
+    "class-validator": "^0.9.1",
     "crypto": "1.0.1",
     "fastify-formbody": "2.0.0",
     "generate-password": "1.4.0",
     "jsonwebtoken": "8.3.0",
+    "lodash": "^4.17.11",
     "moment": "2.22.2",
     "mustache": "2.3.0",
     "passport": "0.4.0",
@@ -52,15 +56,16 @@
     "pg": "7.4.3",
     "redis": "2.8.0",
     "reflect-metadata": "0.1.12",
-    "rxjs": "6.2.1",
+    "rxjs": "^6.3.2",
     "typeorm": "0.2.7",
-    "typescript": "2.9.2"
+    "typeorm-fixtures": "^0.5.0"
   },
   "devDependencies": {
     "@types/express": "4.16.0",
     "@types/jest": "21.1.2",
-    "@types/lodash": "4.14.110",
+    "@types/lodash": "^4.14.110",
     "@types/node": "10.5.1",
+    "@types/redis": "^2.8.6",
     "@types/supertest": "2.0.4",
     "codecov": "3.0.2",
     "dotenv": "6.0.0",
@@ -71,13 +76,15 @@
     "nodemon": "1.17.5",
     "prettier": "1.14.2",
     "rimraf": "2.6.2",
-    "supertest": "3.1.0",
+    "superagent-defaults": "^0.1.14",
+    "supertest": "^3.3.0",
     "ts-jest": "23.0.0",
     "ts-loader": "4.4.2",
     "ts-node": "7.0.0",
     "tsconfig-paths": "3.4.2",
     "tslint": "5.11.0",
     "tslint-config-prettier": "1.15.0",
+    "typescript": "^3.0.3",
     "webpack": "4.14.0",
     "webpack-cli": "3.0.8",
     "webpack-node-externals": "1.7.2"
@@ -88,7 +95,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "yarn test && lint-staged"
+      "pre-commit": "npm run test:changed:only && lint-staged"
     }
   },
   "lint-staged": {
