--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -48,8 +48,8 @@ definitions:
     postgres:
       image: postgres
       environment:
-        POSTGRES_DB: 'pipelines'
-        POSTGRES_USER: 'test_user'
-        POSTGRES_PASSWORD: 'test_user_password'
+        POSTGRES_DB: pipelines
+        POSTGRES_USER: test_user
+        POSTGRES_PASSWORD: test_user_password
     redis:
       image: redis
