fix(scripts): fix scripts

--- a/package.json
+++ b/package.json
@@ -18,8 +18,9 @@
     "test": "cross-env TYPEORM_DATABASE=altiore_contrib_test jest -i -b --detectOpenHandles",
     "pretest:changed:only": "npm run pretest",
     "test:changed:only": "cross-env TYPEORM_DATABASE=altiore_contrib_test jest -i -b --lastCommit --detectOpenHandles",
-    "pretest:remote": "echo  \"Please, do NOT run LOCALLY!\" && node bin/refresh.js && npm run migration:up",
-    "test:remote": "echo -e \"Please, do NOT run LOCALLY!\" && jest --coverage -i && codecov --token=d80eff89-9fdc-4a57-a585-70b6cbcf1abc",
+    "pretest:remote": "node ./bin/refresh.js && npm run migration:up && echo  \"Please, do NOT run LOCALLY!\"",
+    "test:remote": "jest --coverage -i --forceExit && echo -e \"Please, do NOT run LOCALLY!\"",
+    "posttest:remote": "codecov --token=d80eff89-9fdc-4a57-a585-70b6cbcf1abc",
     "webpack": "webpack --config webpack.config.js",
     "prepare:mails": "mjml src/mail/mjml/*.mjml -o mails/",
     "migration:generate": "./node_modules/.bin/ts-node ./node_modules/.bin/typeorm migration:generate --name generated",
