--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -1,4 +1,4 @@
-image: node:8.11.3
+image: node:8.12.0
 
 pipelines:
   default:
@@ -17,6 +17,8 @@ pipelines:
     staging:
       - step:
           name: Tests one more time before deploy
+          caches:
+            - node
           script:
             - npm -v
             - node -v
