--- a/package.json
+++ b/package.json
@@ -33,22 +33,22 @@
   },
   "dependencies": {
     "@nestjs/common": "5.3.7",
-    "@nestjs/core": "^5.3.7",
-    "@nestjs/microservices": "^5.3.7",
-    "@nestjs/passport": "^5.1.0",
-    "@nestjs/swagger": "^2.5.1",
-    "@nestjs/testing": "^5.3.7",
-    "@nestjs/typeorm": "^5.2.2",
-    "@nestjs/websockets": "^5.3.7",
+    "@nestjs/core": "5.3.7",
+    "@nestjs/microservices": "5.3.7",
+    "@nestjs/passport": "5.1.0",
+    "@nestjs/swagger": "2.5.1",
+    "@nestjs/testing": "5.3.7",
+    "@nestjs/typeorm": "5.2.2",
+    "@nestjs/websockets": "5.3.7",
     "@sendgrid/mail": "6.3.1",
     "cache-manager-redis-store": "1.5.0",
     "class-transformer": "0.1.9",
-    "class-validator": "^0.9.1",
+    "class-validator": "0.9.1",
     "crypto": "1.0.1",
     "fastify-formbody": "2.0.0",
     "generate-password": "1.4.0",
     "jsonwebtoken": "8.3.0",
-    "lodash": "^4.17.11",
+    "lodash": "4.17.11",
     "moment": "2.22.2",
     "mustache": "2.3.0",
     "passport": "0.4.0",
@@ -57,9 +57,9 @@
     "pg": "7.4.3",
     "redis": "2.8.0",
     "reflect-metadata": "0.1.12",
-    "rxjs": "^6.3.2",
+    "rxjs": "6.3.2",
     "typeorm": "0.2.7",
-    "typeorm-fixtures": "^0.5.0"
+    "typeorm-fixtures": "0.5.0"
   },
   "devDependencies": {
     "@types/express": "4.16.0",
