feat(project): remove project available by super-admin only or by user with access level = 7 (violet)

--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,9 @@ BASE_DIR = src
 TYPEORM_USERNAME = altiore_contrib
 TYPEORM_PASSWORD = wrong-password
 TYPEORM_DATABASE = altiore_contrib
+TYPEORM_LOGGING = true
 
 JWT_SECRET = wrong-jwt-secret-32-characters
+JWT_EXPIRES_IN = 3600
+
 SENDGRID_API_KEY = wrong-api-key
