--- a/package.json
+++ b/package.json
@@ -96,7 +96,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "npm run test:changed:only && lint-staged"
+      "pre-commit": "npm run build && npm run test:changed:only && lint-staged"
     }
   },
   "lint-staged": {
