--- a/package.json
+++ b/package.json
@@ -101,13 +101,13 @@
   },
   "lint-staged": {
     "*.{js,jsx,json,css,md}": [
-      "prettier --write --print-width 120 --trailing-comma es5",
+      "prettier --write --print-width 120 --single-quote --trailing-comma es5",
       "git add"
     ],
     "*.{ts,tsx}": [
-      "prettier --write --print-width 120 --single-quote --parser typescript --trailing-comma es5",
+      "prettier --write --print-width 120 --single-quote --trailing-comma es5 --parser typescript",
       "tslint --fix -t verbose",
-      "prettier --write --print-width 120 --single-quote --parser typescript --trailing-comma es5",
+      "prettier --write --print-width 120 --single-quote --trailing-comma es5 --parser typescript",
       "git add"
     ]
   }
