--- a/package.json
+++ b/package.json
@@ -59,11 +59,11 @@
     "redis": "2.8.0",
     "reflect-metadata": "0.1.12",
     "rxjs": "6.3.2",
-    "typeorm": "0.2.7",
-    "typeorm-fixtures": "0.5.0"
+    "typeorm": "0.2.7"
   },
   "devDependencies": {
     "@types/express": "4.16.0",
+    "@types/faker": "^4.1.4",
     "@types/jest": "21.1.2",
     "@types/lodash": "^4.14.110",
     "@types/node": "10.5.1",
@@ -71,6 +71,7 @@
     "@types/supertest": "2.0.4",
     "codecov": "3.0.2",
     "dotenv": "6.0.0",
+    "faker": "^4.1.0",
     "husky": "^1.0.0-rc.13",
     "jest": "23.2.0",
     "lint-staged": "7.2.2",
@@ -86,6 +87,7 @@
     "tsconfig-paths": "3.4.2",
     "tslint": "5.11.0",
     "tslint-config-prettier": "1.15.0",
+    "typeorm-fixtures": "^0.7.0",
     "typescript": "^3.1.2",
     "webpack": "4.14.0",
     "webpack-cli": "3.0.8",
