feat(gravatar): add gravatar as default user avatar

--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "crypto": "1.0.1",
     "fastify-formbody": "2.0.0",
     "generate-password": "1.4.0",
+    "gravatar": "^1.6.0",
     "jsonwebtoken": "8.3.0",
     "lodash": "4.17.11",
     "moment": "2.22.2",
