--- a/package.json
+++ b/package.json
@@ -61,7 +61,7 @@
     "redis": "2.8.0",
     "reflect-metadata": "0.1.12",
     "rxjs": "6.3.2",
-    "typeorm": "0.2.8"
+    "typeorm": "0.2.9"
   },
   "devDependencies": {
     "@types/express": "4.16.0",
@@ -72,18 +72,19 @@
     "@types/redis": "^2.8.6",
     "@types/supertest": "2.0.4",
     "codecov": "3.0.2",
+    "cross-env": "^5.2.0",
     "dotenv": "6.0.0",
     "faker": "^4.1.0",
-    "husky": "^1.0.0-rc.13",
+    "husky": "1.2.0",
     "jest": "23.2.0",
     "lint-staged": "7.2.2",
-    "mjml": "4.1.0",
-    "nodemon": "1.17.5",
+    "mjml": "4.2.1",
+    "nodemon": "1.18.7",
     "prettier": "1.14.2",
     "rimraf": "2.6.2",
     "superagent-defaults": "^0.1.14",
-    "supertest": "^3.3.0",
-    "ts-jest": "23.0.0",
+    "supertest": "3.3.0",
+    "ts-jest": "23.10.5",
     "ts-loader": "4.4.2",
     "ts-node": "7.0.0",
     "tsconfig-paths": "3.4.2",
