--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,15 @@
 NODE_ENV=development
 BASE_DIR=src
 
+TYPEORM_PORT=5432
 TYPEORM_USERNAME=altiore_contrib
 TYPEORM_PASSWORD=wrong-password
 TYPEORM_DATABASE=altiore_contrib
 TYPEORM_LOGGING=true
+
+POSTGRES_TEST_DB=altiore_contrib_test
+
+REDIS_PORT=6379
 
 JWT_SECRET=wrong-jwt-secret-32-characters
 JWT_EXPIRES_IN=3600
@@ -16,8 +21,3 @@ COMPOSE_PROJECT_NAME=altiore
 COMPOSE_PATH_SEPARATOR=:
 COMPOSE_CONVERT_WINDOWS_PATHS=1
 DATA_PATH_HOST=~/.my-docker/altiore
-
-POSTGRES_DB=altiore_contrib
-POSTGRES_TEST_DB=altiore_contrib_test
-POSTGRES_USER=altiore_contrib
-POSTGRES_PASSWORD=wrong-password
