--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     volumes:
       - ${DATA_PATH_HOST}/redis:/data
     ports:
-      - 6379:6379
+      - ${REDIS_PORT}:6379
 
   postgres:
     image: postgres
@@ -15,12 +15,12 @@ services:
       - ./docker/postgres-entrypoint-initdb.d:/docker-entrypoint-initdb.d
       - ./docker/wait-postgres.sh:/usr/bin/wait-postgres
     environment:
-      - POSTGRES_DB=${POSTGRES_DB}
+      - POSTGRES_DB=${TYPEORM_DATABASE}
       - POSTGRES_TEST_DB=${POSTGRES_TEST_DB}
-      - POSTGRES_USER=${POSTGRES_USER}
-      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+      - POSTGRES_USER=${TYPEORM_USERNAME}
+      - POSTGRES_PASSWORD=${TYPEORM_PASSWORD}
     ports:
-      - 5432:5432
+      - ${TYPEORM_PORT}:5432
 
 volumes:
   postgres:
