--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "class-validator": "0.9.1",
     "crypto": "1.0.1",
     "fastify-formbody": "2.0.0",
-    "generate-password": "1.4.0",
+    "generate-password": "^1.4.1",
     "gravatar": "^1.6.0",
     "jsonwebtoken": "8.3.0",
     "lodash": "4.17.11",
@@ -60,7 +60,7 @@
     "redis": "2.8.0",
     "reflect-metadata": "0.1.12",
     "rxjs": "6.3.2",
-    "typeorm": "0.2.9"
+    "typeorm": "0.2.12"
   },
   "devDependencies": {
     "@types/express": "4.16.0",
