--- a/package.json
+++ b/package.json
@@ -64,7 +64,7 @@
   },
   "devDependencies": {
     "@types/express": "4.16.0",
-    "@types/faker": "^4.1.4",
+    "@types/faker": "4.1.5",
     "@types/jest": "21.1.2",
     "@types/lodash": "^4.14.110",
     "@types/node": "10.5.1",
