--- a/package.json
+++ b/package.json
@@ -33,14 +33,16 @@
     "ln:typeorm:fixtures": "rm -rf node_modules/typeorm-fixtures && ln -s $PWD/../../typeorm-fixtures $PWD/node_modules/typeorm-fixtures"
   },
   "dependencies": {
-    "@nestjs/common": "5.3.7",
-    "@nestjs/core": "5.3.7",
-    "@nestjs/microservices": "5.3.7",
-    "@nestjs/passport": "5.1.0",
-    "@nestjs/swagger": "2.5.1",
-    "@nestjs/testing": "5.3.7",
-    "@nestjs/typeorm": "5.2.2",
-    "@nestjs/websockets": "5.3.7",
+    "@nestjs/common": "6.5.3",
+    "@nestjs/core": "6.5.3",
+    "@nestjs/microservices": "6.5.3",
+    "@nestjs/passport": "6.1.0",
+    "@nestjs/platform-express": "6.5.3",
+    "@nestjs/platform-socket.io": "6.5.3",
+    "@nestjs/swagger": "3.1.0",
+    "@nestjs/testing": "6.5.3",
+    "@nestjs/typeorm": "6.1.3",
+    "@nestjs/websockets": "6.5.3",
     "@sendgrid/mail": "6.3.1",
     "cache-manager-redis-store": "1.5.0",
     "class-transformer": "0.1.9",
@@ -60,6 +62,7 @@
     "redis": "2.8.0",
     "reflect-metadata": "0.1.12",
     "rxjs": "6.3.2",
+    "swagger-ui-express": "4.0.7",
     "typeorm": "0.2.12"
   },
   "devDependencies": {
@@ -90,7 +93,7 @@
     "tslint": "5.11.0",
     "tslint-config-prettier": "1.15.0",
     "typeorm-fixtures": "^0.8.2",
-    "typescript": "^3.1.2",
+    "typescript": "3.5.3",
     "webpack": "4.14.0",
     "webpack-cli": "3.0.8",
     "webpack-node-externals": "1.7.2"
