--- a/.env.example
+++ b/.env.example
@@ -21,3 +21,7 @@ COMPOSE_PROJECT_NAME=altiore
 COMPOSE_PATH_SEPARATOR=:
 COMPOSE_CONVERT_WINDOWS_PATHS=1
 DATA_PATH_HOST=~/.my-docker/altiore
+
+# Google Cloud Storage
+GOOGLE_APPLICATION_BUCKET=altiore_img_bucket2
+GOOGLE_APPLICATION_CREDENTIALS=/Users/mac/www/altiore/altiore.api/google-api-key.json
