setup correct api credentials to Google Cloud API

--- a/.env.example
+++ b/.env.example
@@ -23,5 +23,5 @@ COMPOSE_CONVERT_WINDOWS_PATHS=1
 DATA_PATH_HOST=~/.my-docker/altiore
 
 # Google Cloud Storage
-GOOGLE_APPLICATION_BUCKET=altiore_img_bucket2
-GOOGLE_APPLICATION_CREDENTIALS=/Users/mac/www/altiore/altiore.api/google-api-key.json
+GOOGLE_APPLICATION_BUCKET=altiore
+GOOGLE_APPLICATION_CREDENTIALS=altiore-8888-aaaaaaaaa.json
