fix preinstall script

--- a/.env.example
+++ b/.env.example
@@ -25,3 +25,4 @@ DATA_PATH_HOST=~/.my-docker/altiore
 # Google Cloud Storage
 GOOGLE_APPLICATION_BUCKET=altiore
 GOOGLE_APPLICATION_CREDENTIALS=altiore-8888-aaaaaaaaa.json
+GOOGLE_CLOUD_CRED={"json object with credentials here"}
