--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "fastify-formbody": "2.0.0",
     "generate-password": "1.4.1",
     "gravatar": "1.6.0",
+    "helmet": "3.20.0",
     "jsonwebtoken": "8.3.0",
     "lodash": "4.17.15",
     "moment": "2.22.2",
