--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@nestjs/typeorm": "6.1.3",
     "@nestjs/websockets": "6.5.3",
     "@sendgrid/mail": "6.3.1",
+    "cache-manager": "2.10.0",
     "cache-manager-redis-store": "1.5.0",
     "class-transformer": "0.1.9",
     "class-validator": "0.9.1",
