--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,9 +9,9 @@ services:
       - ${REDIS_PORT}:6379
 
   postgres:
-    image: postgres
+    image: postgres:11.5
+    restart: always
     volumes:
-      - ${DATA_PATH_HOST}/postgres:/var/lib/postgresql/data
       - ./docker/postgres-entrypoint-initdb.d:/docker-entrypoint-initdb.d
       - ./docker/wait-postgres.sh:/usr/bin/wait-postgres
     environment:
