--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@nestjs/microservices": "6.5.3",
     "@nestjs/passport": "6.1.0",
     "@nestjs/platform-express": "6.5.3",
+    "@nestjs/platform-fastify": "6.10.11",
     "@nestjs/platform-socket.io": "6.5.3",
     "@nestjs/swagger": "3.1.0",
     "@nestjs/testing": "6.5.3",
@@ -100,7 +101,7 @@
     "tslint-config-prettier": "1.15.0",
     "typeorm-fixtures": "0.8.5",
     "typescript": "3.5.3",
-    "webpack": "4.14.0",
+    "webpack": "^4.41.2",
     "webpack-cli": "3.0.8",
     "webpack-node-externals": "1.7.2"
   },
