add missing package

--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "class-validator": "0.9.1",
     "crypto": "1.0.1",
     "fastify-formbody": "2.0.0",
+    "fastify-swagger": "2.5.0",
     "generate-password": "1.4.1",
     "gravatar": "1.6.0",
     "helmet": "3.21.1",
@@ -79,6 +80,7 @@
     "@types/lodash": "4.14.136",
     "@types/node": "10.5.1",
     "@types/redis": "2.8.13",
+    "@types/socket.io": "2.1.4",
     "@types/supertest": "2.0.4",
     "codecov": "3.0.2",
     "cross-env": "^5.2.0",
