--- a/package.json
+++ b/package.json
@@ -36,15 +36,17 @@
   },
   "dependencies": {
     "@google-cloud/storage": "3.0.3",
-    "@nestjs/common": "6.5.3",
-    "@nestjs/core": "6.5.3",
+    "@nestjs/common": "6.10.11",
+    "@nestjs/core": "6.10.11",
     "@nestjs/microservices": "6.5.3",
     "@nestjs/passport": "6.1.0",
-    "@nestjs/platform-express": "6.5.3",
+    "@nestjs/platform-express": "6.10.11",
     "@nestjs/platform-fastify": "6.10.11",
+    "@nestjs/platform-socket.io": "6.10.11",
     "@nestjs/swagger": "3.1.0",
-    "@nestjs/testing": "6.5.3",
+    "@nestjs/testing": "6.10.11",
     "@nestjs/typeorm": "6.2.0",
+    "@nestjs/websockets": "6.10.11",
     "@sendgrid/mail": "6.3.1",
     "cache-manager": "2.10.0",
     "cache-manager-redis-store": "1.5.0",
@@ -68,6 +70,7 @@
     "redis": "2.8.0",
     "reflect-metadata": "0.1.12",
     "rxjs": "6.3.2",
+    "socket.io-redis": "5.2.0",
     "swagger-ui-express": "4.0.7",
     "typeorm": "0.2.19"
   },
@@ -78,6 +81,7 @@
     "@types/lodash": "4.14.136",
     "@types/node": "10.5.1",
     "@types/redis": "2.8.13",
+    "@types/socket.io": "2.1.4",
     "@types/supertest": "2.0.4",
     "codecov": "3.0.2",
     "cross-env": "^5.2.0",
