--- a/package.json
+++ b/package.json
@@ -127,6 +127,10 @@
       "tslint --fix -t verbose",
       "prettier --write --print-width 100 --single-quote --trailing-comma es5 --parser typescript",
       "git add"
+    ],
+    "*.{html,mjml}": [
+      "npm run prepare:mails",
+      "git add"
     ]
   }
 }
